codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                          ! for shell commands                  "
"  ctrl + j for newline                    ⌥ + enter to submit message           "
"  tab to complete path                    @ for file paths                      "
"  ctrl + v to paste images                ctrl + g to edit in external editor   "
"  esc esc to edit previous message        ctrl + r search history               "
"  ctrl + c to exit                        ⌥ + , reasoning down                  "
"  ⌥ + . reasoning up                      shift + tab to change mode            "
"  ctrl + t to view transcript                                                   "
"                                                                                "
"  customize shortcuts with /keymap                                              "
