codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_disabled_context_right.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Plan mode (shift+tab to cycle) · feature/robustness@0.144.1 · built 2026-07-12T13:31:30Z            50% context left  "
