codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_enabled_mode_and_ide_context_right.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"                                             Plan mode (shift+tab to cycle) · feature/robustness@0.144.1 · IDE context  "
