codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_yields_to_queue_hint.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ⌥ + enter to queue message                                 100% context left  "
